--- a/themes/gohugoioTheme/layouts/partials/site-nav.html
+++ b/themes/gohugoioTheme/layouts/partials/site-nav.html
@@ -5,7 +5,7 @@
 
     <h1 class="dim f3 lh-solid ml0-ns mr0 mr4-l mv0 pl3 pl4-ns">
       <a href="{{ .Site.BaseURL }}" class="link white">
-         HUGO
+         DESIGN SYSTEM
       </a>
     </h1>
     <ul class="list ma0 pa0 dn dib-l">
@@ -29,10 +29,5 @@
     <div class="db dib-ns pl3">
       {{- partial "site-search.html" . -}}
     </div>
-
-    <span class="absolute mt1 mt2-l pr3 right-0 top-0">
-      {{- partialCached "social-follow.html" . -}}
-    </span>
-
   </div>
 </nav>
