--- a/themes/gohugoioTheme/layouts/partials/partials-principle/nav-links-principles-mobile.html
+++ b/themes/gohugoioTheme/layouts/partials/partials-principle/nav-links-principles-mobile.html
@@ -1,5 +1,5 @@
 {{ $currentPage := . }}
-{{ $menu := .Site.Menus.components.ByWeight }}
+{{ $menu := .Site.Menus.principles.ByWeight }}
 <ul class="list dib ph0 ma0 scrolling-touch tc">
   {{ range $menu }}{{ $post := printf "%s" .Post }}
     <li  class="tl dib ma0 hover-bg-black w-100{{ if eq $post "break" }} mb2 bb b--mid-gray{{ end }}">
