--- a/themes/gohugoioTheme/layouts/partials/partials-document/pagelayout-documentation.html
+++ b/themes/gohugoioTheme/layouts/partials/partials-document/pagelayout-documentation.html
@@ -2,13 +2,13 @@
   <div class="w-100 ph4 pb5 pb6-ns pt1 mt4 pt3-ns">
 
   <div class="flex">
-    <div class="dn db-l w-20">ORIGINAL
-        {{ partial "nav-links-docs.html" .context }}
+    <div class="dn db-l w-20">
+        {{ partial "partials-principle/nav-links-principles.html" .context }}
     </div>
 
     <div class="w-100 w-80-l ph0 ph4-l">
       <article class="w-100 nested-copy-line-height nested-links nested-img">
-        <h1 class="primary-color-dark f2">ORIGINAL PARTIAL
+        <h1 class="primary-color-dark f2">PRINCIPLES PARTIAL
           {{ with $.context.Data.Singular }}{{ . | humanize }}: {{ end }}{{ .context.Title }}
         </h1>
         <div class="{{ .Site.Params.copyClass }} mid-gray f5 f4-l">
