Menu system almost understood and sorted

--- a/themes/gohugoioTheme/layouts/_default/single.html
+++ b/themes/gohugoioTheme/layouts/_default/single.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="order-0 w-20 dn db-l">
-        {{ partial "nav-links-docs.html" . }}
+        {{ partial "nav-links-components.html" . }}
       </div>
 
     </div>
