--- a/themes/gohugoioTheme/layouts/_default/terms.html
+++ b/themes/gohugoioTheme/layouts/_default/terms.html
@@ -5,7 +5,7 @@
 
   <div class="flex">
     <div class="dn db-l w-20">
-        {{ partial "nav-links-docs.html" . }}
+        {{ partial "nav-links-components.html" . }}
     </div>
 
     <div class="w-100 w-80-l ph0 ph4-l">
