--- a/themes/gohugoioTheme/layouts/partials/nav-mobile.html
+++ b/themes/gohugoioTheme/layouts/partials/nav-mobile.html
@@ -2,7 +2,7 @@
     {{ partial "nav-links-global-mobile.html" . }}
 </div>
 <div  class="docsmenu mobilemenu pb3 dn">
-    {{ partial "nav-links-docs-mobile.html" . }}
+    {{ partial "nav-links-components-mobile.html" . }}
 </div>
 
 <div class="flex dn-l justify-between">
