--- a/themes/gohugoioTheme/layouts/_default/list.html
+++ b/themes/gohugoioTheme/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
   {{ $paginator := .Paginate (.Pages | lang.Merge (where .Sites.First.RegularPages "Section" .Section)) }}
   {{ $section_to_display :=  .Sections | default $paginator.Pages }}
-  {{ partial "partials-component/pagelayout-components.html" (dict "context" . "section_to_display" $section_to_display ) }}
+  {{ partial "pagelayout-components.html" (dict "context" . "section_to_display" $section_to_display ) }}
 {{ end }}
