--- a/themes/gohugoioTheme/layouts/_default/taxonomy.html
+++ b/themes/gohugoioTheme/layouts/_default/taxonomy.html
@@ -1,4 +1,4 @@
 {{ define "main" }}
   {{ $section_to_display := .Pages }}
-  {{ partial "pagelayout.html" (dict "context" . "section_to_display" $section_to_display ) }}
+  {{ partial "pagelayout-components.html" (dict "context" . "section_to_display" $section_to_display ) }}
 {{ end }}
