--- a/themes/gohugoioTheme/layouts/partials/pagelayout-components.html
+++ b/themes/gohugoioTheme/layouts/partials/pagelayout-components.html
@@ -3,12 +3,12 @@
 
   <div class="flex">
     <div class="dn db-l w-20">
-        {{ partial "partials-component/nav-links-components.html" .context }}
+        {{ partial "nav-links-components.html" .context }}
     </div>
 
     <div class="w-100 w-80-l ph0 ph4-l">
       <article class="w-100 nested-copy-line-height nested-links nested-img">
-        <h1 class="primary-color-dark f2"><!--- COMPONENTS PARTIAL --->
+        <h1 class="primary-color-dark f2">
           {{ with $.context.Data.Singular }}{{ . | humanize }}: {{ end }}{{ .context.Title }}
         </h1>
         <div class="{{ .Site.Params.copyClass }} mid-gray f5 f4-l">
